--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <sring-array name="words">
+    <string-array name="words">
         <item>ANDROID</item>
         <item>COMPUTER</item>
         <item>TEA</item>
@@ -13,6 +13,6 @@
         <item>CALL</item>
         <item>LAPTOP</item>
         <item>PINK</item>
-    </sring-array>
+    </string-array>
 
 </resources>
