--- a/app/src/main/res/layout/letter.xml
+++ b/app/src/main/res/layout/letter.xml
@@ -3,4 +3,4 @@
     android:layout_width="wrap_content"
     android:layout_height="35dp"
     android:background="@drawable/letter_up"
-    android:onClick="letterPress"/>
+    android:onClick="letterPressed"/>
