--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="Galgeleg"
-        android:textColor="#0048FF"
+        android:textColor="#9E0523"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/gameName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:hint="@string/WriteYourName"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:textColor="#0048FF"
+        android:textColor="#9E0523"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="@+id/yourName"
         app:layout_constraintHorizontal_bias="0.496"
@@ -57,7 +57,6 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="418dp"
         android:layout_height="96dp"
-        android:background="#0048FF"
         android:fontFamily="sans-serif-condensed-medium"
         android:text="@string/start"
         android:textStyle="bold"
