--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -51,7 +51,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hi_and_welcome_to_galgeleg_game"
+        android:text="@string/hi"
+        android:layout_gravity="center"
         android:textSize="30dp"
         android:gravity="center"
         android:textColor="@android:color/holo_orange_light"
