activity_start_game.xml changed

--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:text="Galgeleg"
+        android:text="Let\´s play"
         android:textColor="#9E0523"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/gameName"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="32dp"
         android:ems="10"
         android:fontFamily="casual"
-        android:hint="@string/WriteYourName"
+        android:hint="Your Name ?"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColor="#9E0523"
