--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_gravity="center"
-        android:background="#FF4444"
+        android:background="#EA4E43"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -67,8 +67,8 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:layout_marginTop="2dp"
+        android:background="#CA3A30"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -82,8 +82,8 @@
         android:layout_width="match_parent"
         android:layout_height="15dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:layout_marginTop="2dp"
+        android:background="#A62C23"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -96,8 +96,8 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:layout_marginTop="3dp"
+        android:background="#8C251D"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -110,8 +110,8 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:layout_marginTop="4dp"
+        android:background="#661B15"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -125,7 +125,7 @@
         android:layout_height="30dp"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:background="#4D1410"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
@@ -138,8 +138,8 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:background="#FF4444"
+        android:layout_marginTop="6dp"
+        android:background="#330D0B"
         android:horizontalSpacing="5dp"
         android:numColumns="7"
         android:padding="2dp"
