--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -7,47 +7,44 @@
     tools:context=".GameOver">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/gameOver"
         android:layout_width="251dp"
         android:layout_height="52dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="56dp"
+        android:gravity="center_horizontal"
         android:text="@string/game_over"
+        android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/theWordWas"
         android:layout_width="104dp"
         android:layout_height="52dp"
         android:layout_marginStart="152dp"
         android:layout_marginTop="148dp"
-        android:text="@string/the_word_was"
+        android:gravity="center_horizontal"
+        android:text="@string/the_word"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="332dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="412dp"
-        android:layout_marginEnd="8dp"
-        android:text="..."
+        android:id="@+id/theWord"
+        android:layout_width="67dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="224dp"
+        android:gravity="center_horizontal"
+        android:text="word"
         android:textAlignment="center"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
