--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -7,7 +7,7 @@
     tools:context=".GameOver">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/gameOver"
         android:layout_width="289dp"
         android:layout_height="52dp"
         android:layout_marginStart="68dp"
@@ -22,7 +22,7 @@
         android:gravity="center_horizontal" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/theWordWas"
         android:layout_width="171dp"
         android:layout_height="52dp"
         android:layout_marginStart="120dp"
@@ -32,23 +32,37 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="120dp"
         android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="332dp"
-        android:layout_height="34dp"
+        android:layout_width="263dp"
+        android:layout_height="40dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="516dp"
         android:layout_marginEnd="8dp"
+        android:gravity="center_horizontal"
         android:text="..."
         android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="93dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="580dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center_horizontal"
+        android:text="..."
+        android:textAlignment="center"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
