activity_game_over.xml text center

--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -8,40 +8,37 @@
 
     <TextView
         android:id="@+id/gameOver"
-        android:layout_width="251dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="56dp"
-        android:gravity="center_horizontal"
-        android:text="@string/game_over"
-        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:text="Game over..."
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/theWordWas"
-        android:layout_width="104dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="148dp"
-        android:gravity="center_horizontal"
-        android:text="@string/the_word"
-        android:textAlignment="center"
+        android:id="@+id/theWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="176dp"
+        android:gravity="center"
+        android:text="word"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/theWord"
-        android:layout_width="67dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="172dp"
-        android:layout_marginTop="224dp"
-        android:gravity="center_horizontal"
-        android:text="word"
-        android:textAlignment="center"
+        android:id="@+id/theWordWas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="132dp"
+        android:gravity="center"
+        android:text="The word was:"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
