--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.029" />
 
     <TextView
-        android:id="@+id/getNrOfWrongGuess"
+        android:id="@+id/get_word_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -33,11 +33,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nrOfWrongGuess"
+        app:layout_constraintTop_toBottomOf="@+id/nrOfWrongGuessid"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/nrOfWrongGuess"
+        android:id="@+id/nrOfWrongGuessid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
