--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".GameOver">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_marginTop="60dp"
         android:gravity="center"
         android:text="Game over..."
+        android:textColor="@android:color/holo_orange_light"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +25,11 @@
         android:id="@+id/get_word_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginStart="252dp"
+        android:layout_marginTop="132dp"
         android:gravity="center"
         android:text="word"
+        android:textColor="@color/design_default_color_error"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,10 +38,11 @@
         android:id="@+id/theWordWas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
+        android:layout_marginStart="108dp"
         android:layout_marginTop="132dp"
         android:gravity="center"
         android:text="The word was:"
+        android:textColor="@color/design_default_color_error"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
