--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -33,11 +33,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nrOfWrongGuessid"
+        app:layout_constraintTop_toBottomOf="@+id/nr_of_wrong_guessid"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/nrOfWrongGuessid"
+        android:id="@+id/nr_of_wrong_guessid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
